Feature: trigger flow

--- a/action-a/Dockerfile
+++ b/action-a/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:9.5-slim
-
+#LABELS
 LABEL "com.github.actions.name"="Hello World"
 LABEL "com.github.actions.description"="Write arguments to the standard output"
 LABEL "com.github.actions.icon"="mic"
